--- a/config
+++ b/config
@@ -1,5 +1,5 @@
 name                            : Total.js
-author                          : You company name
+author                          : Your company name
 version                         : 1.0.0
 secret                          : secret-key-for-web
 
