--- a/config
+++ b/config
@@ -4,9 +4,9 @@ version                         : 1.0.0
 secret                          : secret-key-for-web
 
 // Mail settings
-mail.smtp                       : smtp.yourwebsite.com
-mail.smtp.options               : {"secure":false,"port":25,"user":"","password":"","timeout":10000}
-mail.address.from               : your@yourwebsite.com
-mail.address.reply              : your@yourwebsite.com
-mail.address.bcc                :
-mail.contact                    : petersirka@gmail.com
+mail-smtp                       : smtp.yourwebsite.com
+mail-smtp-options               : {"secure":false,"port":25,"user":"","password":"","timeout":10000}
+mail-address-from               : your@yourwebsite.com
+mail-address-reply              : your@yourwebsite.com
+mail-address-copy               :
+mail-contact                    : petersirka@gmail.com
